# xdpdrop

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
examples/: README.md  advertising.txt  ipv4_drop.yaml
src/: lib.rs  main.rs
src/bpf/: dnsdrop.bpf.c  xdpdrop.bpf.c
src/config/: mod.rs
src/config/dnslist/: mod.rs
src/config/iplist/: mod.rs
src/dnsdrop/: mod.rs
src/drop/: mod.rs
src/ipdrop/: mod.rs
src/xdp/: helpers.rs
xdp-c/: xdp_drop.c
