[package]
name = "xdpdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.19"
anyhow = "1.0"
libc = "0.2.139"
libbpf-sys = "1.1.1"
ctrlc = "3.2.4"
argh = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
crossbeam-channel = "0.5.6"
tempfile = "3.3.0"

[build-dependencies]
libbpf-cargo = "0.13"
